--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       integrity="sha512-WNLxfP/8cVYL9sj8Jnp6et0BkubLP31jhTG9vhL/F5uEZmg5wEzKoXp1kJslzPQWwPT1eyMiSxlKCgzHLOTOTQ=="
       crossorigin="anonymous"></script>
     <script src="components/app.js"></script>
+    <script src="components/grade-table.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
