--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>Student Grade Table</header>
-    <table class="table table-striped table-bordered">
+    <table id="student-table" class="table table-striped table-bordered">
       <thead class="thead-dark">
         <tr>
           <th>Student Name</th>
