--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
       crossorigin="anonymous" />
   </head>
   <body>
-    <header>Student Grade Table</header>
+    <header>
+      <h1>Student Grade Table</h1>
+    </header>
     <table id="student-table" class="table table-striped table-bordered">
       <thead class="thead-dark">
         <tr>
@@ -19,21 +21,6 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <th>Student Name</th>
-          <th>Course</th>
-          <th>Grade</th>
-        </tr>
-        <tr>
-          <th>Student Name</th>
-          <th>Course</th>
-          <th>Grade</th>
-        </tr>
-        <tr>
-          <th>Student Name</th>
-          <th>Course</th>
-          <th>Grade</th>
-        </tr>
       </tbody>
     </table>
 
