--- a/index.html
+++ b/index.html
@@ -7,22 +7,32 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css"
       integrity="sha512-MoRNloxbStBcD8z3M/2BmnT+rg4IsMxPkXaGh2zD6LGNNFE80W3onsAhRcMAMrSoyWL9xD7Ert0men7vR8LUZg=="
       crossorigin="anonymous" />
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <header>
-      <h1>Student Grade Table</h1>
-    </header>
-    <table id="student-table" class="table table-striped table-bordered">
-      <thead class="thead-dark">
-        <tr>
-          <th>Student Name</th>
-          <th>Course</th>
-          <th>Grade</th>
-        </tr>
-      </thead>
-      <tbody>
-      </tbody>
-    </table>
+    <div class="container">
+      <header class="row">
+        <div class="col">
+          <h1>Student Grade Table</h1>
+        </div>
+
+        <div class="col align-self-center">
+          <h3>Average Grade <span class="badge badge-secondary">84</span></h3>
+        </div>
+
+      </header>
+      <table id="student-table" class="table table-striped table-bordered">
+        <thead class="thead-dark">
+          <tr>
+            <th>Student Name</th>
+            <th>Course</th>
+            <th>Grade</th>
+          </tr>
+        </thead>
+        <tbody>
+        </tbody>
+      </table>
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"
       integrity="sha512-WNLxfP/8cVYL9sj8Jnp6et0BkubLP31jhTG9vhL/F5uEZmg5wEzKoXp1kJslzPQWwPT1eyMiSxlKCgzHLOTOTQ=="
