--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       crossorigin="anonymous"></script>
     <script src="components/app.js"></script>
     <script src="components/grade-table.js"></script>
+    <script src="components/page-header.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
