--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
 
         <div class="col align-self-center">
-          <h3>Average Grade <span class="badge badge-secondary">84</span></h3>
+          <h3>Average Grade <span id="average-grade" class="badge badge-secondary"></span></h3>
         </div>
 
       </header>
