--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css"
       integrity="sha512-MoRNloxbStBcD8z3M/2BmnT+rg4IsMxPkXaGh2zD6LGNNFE80W3onsAhRcMAMrSoyWL9xD7Ert0men7vR8LUZg=="
       crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+      integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
+      crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -15,23 +18,68 @@
         <div class="col">
           <h1>Student Grade Table</h1>
         </div>
-
         <div class="col align-self-center">
           <h3>Average Grade <span id="average-grade" class="badge badge-secondary"></span></h3>
         </div>
-
       </header>
-      <table id="student-table" class="table table-striped table-bordered">
-        <thead class="thead-dark">
-          <tr>
-            <th>Student Name</th>
-            <th>Course</th>
-            <th>Grade</th>
-          </tr>
-        </thead>
-        <tbody>
-        </tbody>
-      </table>
+
+      <div class="row">
+        <div class="table-column col-9">
+          <table id="student-table" class="table table-striped table-bordered">
+            <thead class="thead-dark">
+              <tr>
+                <th>Student Name</th>
+                <th>Course</th>
+                <th>Grade</th>
+              </tr>
+            </thead>
+            <tbody>
+            </tbody>
+          </table>
+        </div>
+        <div class="input-column col">
+          <form>
+            <div class="form-group row">
+              <div class="input-group">
+                <div class="input-group-prepend col-2">
+                  <span class="input-group-text border-0">
+                    <i class="fa fa-user" aria-hidden="true"></i>
+                  </span>
+                </div>
+                <input type="text" name="name" class="form-control" placeholder="Name" aria-label="Name">
+              </div>
+            </div>
+
+            <div class="form-group row">
+              <div class="input-group">
+                <div class="input-group-prepend col-2">
+                  <span class="input-group-text border-0">
+                    <i class="fa fa-list-alt" aria-hidden="true"></i>
+                  </span>
+                </div>
+                <input type="text" name="course" class="form-control" placeholder="Course" aria-label="Course">
+              </div>
+            </div>
+
+            <div class="form-group row">
+              <div class="input-group">
+                <div class="input-group-prepend col-2">
+                  <span class="input-group-text border-0">
+                    <i class="fa fa-graduation-cap" aria-hidden="true"></i>
+                  </span>
+                </div>
+                <input type="text" name="grade" class="form-control" placeholder="Grade" aria-label="Grade">
+              </div>
+            </div>
+
+            <div class="button-row">
+              <button type="submit" class="btn btn-success">Add</button>
+              <button type="reset" class="btn btn-light btn-outline-secondary">Cancel</button>
+            </div>
+
+          </form>
+        </div>
+      </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"
