--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
                 <th>Student Name</th>
                 <th>Course</th>
                 <th>Grade</th>
-                <th>Operations</th>
+                <th class="button-column">Operations</th>
               </tr>
             </thead>
             <tbody>
             </tbody>
           </table>
-          <p class=".d-none">No Grades Recorded</p>
+          <p class="no-grades-message d-none">No Grades Recorded</p>
         </div>
 
         <div class="input-column col">
